--- a/configs/experiments/config.yaml
+++ b/configs/experiments/config.yaml
@@ -1,15 +1,13 @@
 defaults:
   - sampler: mgps
 
-dim: 10
 dataset: ffhq
 task: sr4
 std: 0.05
+nsamples: 1
+
 save_folder : "${dataset}/experiments/results/${task}/${sampler.name}"
 im_save_folder : "${dataset}/experiments/images/${task}/"
 device: cuda:0
 
-im_idx:
-  - 20
-  - 42
-  - 40
+im_idx: "00018"
